--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/throttler": "^6.3.0",
     "@prisma/client": "^6.1.0",
     "argon2": "^0.41.1",
+    "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
     "ioredis": "^5.4.2",
     "nestjs-redis": "^1.3.3",
