--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "argon2": "^0.41.1",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
+    "dompurify": "^3.2.3",
     "ioredis": "^5.4.2",
     "nestjs-redis": "^1.3.3",
     "nestjs-resend": "^1.0.1",
