--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "argon2": "^0.41.1",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.3",
     "ioredis": "^5.4.2",
+    "isomorphic-dompurify": "^2.19.0",
     "nestjs-redis": "^1.3.3",
     "nestjs-resend": "^1.0.1",
     "nestjs-zod": "^4.2.0",
